5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4173/executions/1871_1711.log
== TEST (2019-07-02 16:09:48) 
-- CODE:
from numpy import*
from numpy.linalg import*
a = array(eval(input()))
b = int(input())
for i in range(size(a)):
	b[i] = max(i)
if b[i] >= 5:
	print("PASSOU")
else:
	print("REPROVOU")

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:10:14) 
-- CODE:
from numpy import*
from numpy.linalg import*
a = array(eval(input()))
b = int(input())
for i in range(size(a)):
	a[i] = max(i)
if a[i] >= 5:
	print("PASSOU")
else:
	print("REPROVOU")

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:12:06) 
-- CODE:
from numpy import*
from numpy.linalg import*
a = array(eval(input()))
b = int(input())
for i in range(size(a)):
	a[b] = max(i)
if a[i] >= 5:
	print("PASSOU")
else:
	print("REPROVOU")

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:13:55) 
-- CODE:
from numpy import*
from numpy.linalg import*
a = array(eval(input()))
b = int(input())
for i in range(size(a)):
	a[b] = sum(i)
if a[i] >= 5:
	print("PASSOU")
else:
	print("REPROVOU")

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:14:17) 
-- CODE:
from numpy import*
from numpy.linalg import*
a = array(eval(input()))
b = int(input())
for i in range(size(a)):
	a[b] = sum(i)
if a[b] >= 5:
	print("PASSOU")
else:
	print("REPROVOU")

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:15:29) 
-- CODE:
from numpy import*
from numpy.linalg import*
a = array(eval(input()))
b = int(input())
for i in range(size(a)):
	a[b,:] = sum(i)
	

if a[b] >= 5:
	print("PASSOU")
else:
	print("REPROVOU")

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:15:51) 
-- CODE:
from numpy import*
from numpy.linalg import*
a = array(eval(input()))
b = int(input())
for i in range(size(a)):
	a[b,:i] = sum(i)
	

if a[b] >= 5:
	print("PASSOU")
else:
	print("REPROVOU")

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:19:21) 
-- CODE:
from numpy import*
from numpy.linalg import*
a = array(eval(input()))
b = int(input())
for i in range(size(a)):
	a[i] += a[b,:i]
x = a[b]/size(a)
if x >= 5:
	print("PASSOU")
else:
	print("REPROVOU")

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:19:38) 
-- CODE:
from numpy import*
from numpy.linalg import*
a = array(eval(input()))
b = int(input())
for i in range(size(a)):
	a[i] += a[b:i]
x = a[b]/size(a)
if x >= 5:
	print("PASSOU")
else:
	print("REPROVOU")

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:21:39) 
-- CODE:
from numpy import*
from numpy.linalg import*
a = array(eval(input()))
b = int(input())

for i in range(size(a)):
	a[i] += a[b:i]
x = a[b]/shape[a](-1)
if x >= 5:
	print("PASSOU")
else:
	print("REPROVOU")

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:23:13) 
-- CODE:
from numpy import*
from numpy.linalg import*
a = array(eval(input()))
b = int(input())

for i in range(size(a)):
	a[i] += a[b:i]
x = a[b]/shape(a)[0]
if x >= 5:
	print("PASSOU")
else:
	print("REPROVOU")

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:23:32) 
-- CODE:
from numpy import*
from numpy.linalg import*
a = array(eval(input()))
b = int(input())

for i in range(size(a)):
	w += a[b:i]
x = a[b]/shape(a)[0]
if x >= 5:
	print("PASSOU")
else:
	print("REPROVOU")

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:23:47) 
-- CODE:
from numpy import*
from numpy.linalg import*
a = array(eval(input()))
b = int(input())
w = 0
for i in range(size(a)):
	w += a[b:i]
x = w/shape(a)[0]
if x >= 5:
	print("PASSOU")
else:
	print("REPROVOU")

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:24:13) 
-- CODE:
from numpy import*
from numpy.linalg import*
a = array(eval(input()))
b = int(input())
w = 0
for i in range(size(a)):
	w += a[b:i]
x = w/range(a)
if x >= 5:
	print("PASSOU")
else:
	print("REPROVOU")

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:24:25) 
-- CODE:
from numpy import*
from numpy.linalg import*
a = array(eval(input()))
b = int(input())
w = 0
for i in range(size(a)):
	w += a[b:i]
x = w/size(a)
if x >= 5:
	print("PASSOU")
else:
	print("REPROVOU")

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:24:57) 
-- CODE:
from numpy import*
from numpy.linalg import*
a = array(eval(input()))
b = int(input())
w = 0
for i in size(a):
	w += a[b:i]
x = w/size(a)
if x >= 5:
	print("PASSOU")
else:
	print("REPROVOU")

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:25:34) 
-- CODE:
from numpy import*
from numpy.linalg import*
a = array(eval(input()))
b = int(input())
w = 0
for i in range(size(a)):
	w += a[b:i]
x = w/i
if x >= 5:
	print("PASSOU")
else:
	print("REPROVOU")

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:26:11) 
-- CODE:
from numpy import*
from numpy.linalg import*
a = array(eval(input()))
b = int(input())
w = 0
for i in range(size(a)):
	w += a[b:i]
x = w/i
if x >= 5:
	print("PASSOU")
else:
	print("REPROVOU")

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:27:31) 
-- CODE:
from numpy import*
from numpy.linalg import*
a = array(eval(input()))
b = int(input())
w = 0
for i in range(size(a)):
	w += a[b:i]
x = w/shape(a)[1]
if x >= 5:
	print("PASSOU")
else:
	print("REPROVOU")

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:28:26) 
-- CODE:
from numpy import*
from numpy.linalg import*
a = array(eval(input()))
b = int(input())
w = 0
for i in range(size(a)):
	w += a[b,i]
x = w/shape(a)[1]
if x >= 5:
	print("PASSOU")
else:
	print("REPROVOU")

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:28:58) 
-- CODE:
from numpy import*
from numpy.linalg import*
a = array(eval(input()))
b = int(input())
w = 0
for i in range(size(a)):
	w += a[b:i]
x = w/shape(a)[0]
if x >= 5:
	print("PASSOU")
else:
	print("REPROVOU")

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:29:23) 
-- CODE:
from numpy import*
from numpy.linalg import*
a = array(eval(input()))
b = int(input())
w = 0
for i in range(size(a)):
	w += a[b:i]
x = w/shape(a)[0]
if x >= 5:
	print("PASSOU")
else:
	print("REPROVOU")

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:30:34) 
-- CODE:
from numpy import*
from numpy.linalg import*
a = array(eval(input()))
b = int(input())
w = 0
for i in range(size(a)):
	w += a[b:i]
x = w/shape(a)[0]
if x >= 5:
	print("PASSOU")
else:
	print("REPROVOU")
print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:31:47) 
-- CODE:
from numpy import*
from numpy.linalg import*
a = array(eval(input()))
b = int(input())
w = 0
for i in range(size(a)):
	w += a[i:b]
x = w/shape(a)[0]
if x >= 5:
	print("PASSOU")
else:
	print("REPROVOU")

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:33:00) 
-- CODE:
from numpy import*
from numpy.linalg import*
a = array(eval(input()))
b = int(input())
w = 0
for i in shape(a)[b]:
	w += a[i:b]
x = w/shape(a)[0]
if x >= 5:
	print("PASSOU")
else:
	print("REPROVOU")

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:33:27) 
-- CODE:
from numpy import*
from numpy.linalg import*
a = array(eval(input()))
b = int(input())
w = 0
for i in shape(a)[0]:
	w += a[i:b]
x = w/shape(a)[0]
if x >= 5:
	print("PASSOU")
else:
	print("REPROVOU")

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:34:31) 
-- CODE:
from numpy import*
from numpy.linalg import*
a = array(eval(input()))
b = int(input())
w = 0
for i in a[i,:]:
	w += a[i:b]
x = w/shape(a)[0]
if x >= 5:
	print("PASSOU")
else:
	print("REPROVOU")

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:34:42) 
-- CODE:
from numpy import*
from numpy.linalg import*
a = array(eval(input()))
b = int(input())
w = 0
for i in a[x,:]:
	w += a[i:b]
x = w/shape(a)[0]
if x >= 5:
	print("PASSOU")
else:
	print("REPROVOU")

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:36:44) 
-- CODE:
from numpy import*
from numpy.linalg import*
a = array(eval(input()))
b = int(input())
w = 0
f = shape(a)[0]
for i in f:
	w += a[i:b]
x = w/f
if x >= 5:
	print("PASSOU")
else:
	print("REPROVOU")

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:37:13) 
-- CODE:
from numpy import*
from numpy.linalg import*
a = array(eval(input()))
b = int(input())
w = 0
f = shape(a)[0]
g = shape(a)[1]
for i in g:
	w += a[i:b]
x = w/f
if x >= 5:
	print("PASSOU")
else:
	print("REPROVOU")

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:38:50) 
-- CODE:
from numpy import*
from numpy.linalg import*
a = array(eval(input()))
b = int(input())
w = 0
f = shape(a)[0]
g = shape(a)[1]
for i in range(f):
	w += a[i:b]
x = w/f
if x >= 5:
	print("PASSOU")
else:
	print("REPROVOU")

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:39:25) 
-- CODE:
from numpy import*
from numpy.linalg import*
a = array(eval(input()))
b = int(input())
w = 0
f = shape(a)[0]
g = shape(a)[1]
for i in range(f):
	w += a[b:i]
x = w/f
if x >= 5:
	print("PASSOU")
else:
	print("REPROVOU")

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:40:18) 
-- CODE:
from numpy import*
from numpy.linalg import*
a = array(eval(input()))
b = int(input())
w = 0
f = shape(a)[0]
g = shape(a)[1]
for i in range(f):
	w += a[i:b]
x = w/f
if x >= 5:
	print("PASSOU")
else:
	print("REPROVOU")
print(a)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:41:25) 
-- CODE:
from numpy import*
from numpy.linalg import*
a = array(eval(input()))
b = int(input())
w = 0
f = shape(a)[0]
g = shape(a)[1]
for i in range(f):
	w += a[b:i]
x = w/f
if x >= 5 and x <= 10:
	print("PASSOU")
else:
	print("REPROVOU")
print(a)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:42:29) 
-- CODE:
from numpy import*
from numpy.linalg import*
a = array(eval(input()))
b = int(input())
w = 0
f = shape(a)[0]
g = shape(a)[1]
for i in range(f):
	w += a[i:b]
x = w/f
if x >= 5 and x <= 10:
	print("PASSOU")
else:
	print("REPROVOU")
print(a)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:43:25) 
-- CODE:
from numpy import*
from numpy.linalg import*
a = array(eval(input()))
b = int(input())
w = 0
f = shape(a)[0]
g = shape(a)[1]
for i in range(f):
	w += a[i:b]
x = w/f
if x >= 5 and x <= 10:
	print("PASSOU")
else:
	print("REPROVOU")
print(a)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:43:39) 
-- CODE:
from numpy import*
from numpy.linalg import*
a = array(eval(input()))
b = int(input())
w = 0
f = shape(a)[0]
g = shape(a)[1]
for i in range(f):
	w += a[b:i]
x = w/f
if x >= 5 and x <= 10:
	print("PASSOU")
else:
	print("REPROVOU")
print(a)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:46:47) 
-- CODE:
from numpy import*
from numpy.linalg import*
a = array(eval(input()))
b = int(input())
w = 0
f = shape(a)[0]
g = shape(a)[1]
for i in range(g):
	w += a[i:b]
x = w/f
if x >= 5 and x <= 10:
	print("PASSOU")
else:
	print("REPROVOU")


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:47:10) 
-- CODE:
from numpy import*
from numpy.linalg import*
a = array(eval(input()))
b = int(input())
w = 0
f = shape(a)[0]
g = shape(a)[1]
for i in range(g):
	w += a[b:i]
x = w/f
if x >= 5 and x <= 10:
	print("PASSOU")
else:
	print("REPROVOU")


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:47:58) 
-- CODE:
from numpy import*
from numpy.linalg import*
a = array(eval(input()))
b = int(input())
w = 0
f = shape(a)[0]
g = shape(a)[1]
for i in range(g):
	w += a[i:b]
x = w/f
if x >= 5 and x <= 10:
	print("PASSOU")
else:
	print("REPROVOU")
print(a)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:48:13) 
-- CODE:
from numpy import*
from numpy.linalg import*
a = array(eval(input()))
b = int(input())
w = 0
f = shape(a)[0]
g = shape(a)[1]
for i in range(g):
	w += a[b:i]
x = w/f
if x >= 5 and x <= 10:
	print("PASSOU")
else:
	print("REPROVOU")
print(a)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:50:10) 
-- CODE:
from numpy import*
from numpy.linalg import*
a = array(eval(input()))
b = int(input())
w = 0
f = shape(a)[0]
g = shape(a)[1]
for i in range(g):
	w += a[i:b]
x = w/f
if x >= 5 and x <= 10:
	print("PASSOU")
else:
	print("REPROVOU")
print(a)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:50:21) 
-- CODE:
from numpy import*
from numpy.linalg import*
a = array(eval(input()))
b = int(input())
w = 0
f = shape(a)[0]
g = shape(a)[1]
for i in range(g):
	w += a[i,b]
x = w/f
if x >= 5 and x <= 10:
	print("PASSOU")
else:
	print("REPROVOU")
print(a)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-02 16:50:32) 
-- CODE:
from numpy import*
from numpy.linalg import*
a = array(eval(input()))
b = int(input())
w = 0
f = shape(a)[0]
g = shape(a)[1]
for i in range(g):
	w += a[i,b]
x = w/f
if x >= 5 and x <= 10:
	print("PASSOU")
else:
	print("REPROVOU")



-- EXECUTION TIME:
0.937338
-- TEST CASE 1:
---- input:
[[8.7,8.6,2.2],[5.3,8.0,4.9],[0.3,4.4,9.9]]
2
---- correct output:
REPROVOU
---- user output:
PASSOU
-- TEST CASE 2:
---- input:
[[9.5,0.5,8.1],[1.4,5.3,4.0],[9.4,2.6,2.7]]
1
---- correct output:
REPROVOU
---- user output:
REPROVOU
-- TEST CASE 3:
---- input:
[[6.8,8.2,9.5],[4.2,1.1,3.8],[8.4,7.9,8.1]]
2
---- correct output:
PASSOU
---- user output:
PASSOU
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-02 16:50:52) 
-- CODE:
from numpy import*
from numpy.linalg import*
a = array(eval(input()))
b = int(input())
w = 0
f = shape(a)[0]
g = shape(a)[1]
for i in range(g):
	w += a[i,b]
x = w/f
if x >= 5 and x <= 10:
	print("PASSOU")
else:
	print("REPROVOU")



-- EXECUTION TIME:
1.78004
-- TEST CASE 1:
---- input:
[[8.7,8.6,2.2],[5.3,8.0,4.9],[0.3,4.4,9.9]]
2
---- correct output:
REPROVOU
---- user output:
PASSOU
-- TEST CASE 2:
---- input:
[[9.5,0.5,8.1],[1.4,5.3,4.0],[9.4,2.6,2.7]]
1
---- correct output:
REPROVOU
---- user output:
REPROVOU
-- TEST CASE 3:
---- input:
[[6.8,8.2,9.5],[4.2,1.1,3.8],[8.4,7.9,8.1]]
2
---- correct output:
PASSOU
---- user output:
PASSOU
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-02 16:50:53) 
-- CODE:
from numpy import*
from numpy.linalg import*
a = array(eval(input()))
b = int(input())
w = 0
f = shape(a)[0]
g = shape(a)[1]
for i in range(g):
	w += a[i,b]
x = w/f
if x >= 5 and x <= 10:
	print("PASSOU")
else:
	print("REPROVOU")



-- EXECUTION TIME:
4.74491
-- TEST CASE 1:
---- input:
[[8.7,8.6,2.2],[5.3,8.0,4.9],[0.3,4.4,9.9]]
2
---- correct output:
REPROVOU
---- user output:
PASSOU
-- TEST CASE 2:
---- input:
[[9.5,0.5,8.1],[1.4,5.3,4.0],[9.4,2.6,2.7]]
1
---- correct output:
REPROVOU
---- user output:
REPROVOU
-- TEST CASE 3:
---- input:
[[6.8,8.2,9.5],[4.2,1.1,3.8],[8.4,7.9,8.1]]
2
---- correct output:
PASSOU
---- user output:
PASSOU
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-02 16:50:53) 
-- CODE:
from numpy import*
from numpy.linalg import*
a = array(eval(input()))
b = int(input())
w = 0
f = shape(a)[0]
g = shape(a)[1]
for i in range(g):
	w += a[i,b]
x = w/f
if x >= 5 and x <= 10:
	print("PASSOU")
else:
	print("REPROVOU")



-- EXECUTION TIME:
4.6032
-- TEST CASE 1:
---- input:
[[8.7,8.6,2.2],[5.3,8.0,4.9],[0.3,4.4,9.9]]
2
---- correct output:
REPROVOU
---- user output:
REPROVOU
-- TEST CASE 2:
---- input:
[[9.5,0.5,8.1],[1.4,5.3,4.0],[9.4,2.6,2.7]]
1
---- correct output:
REPROVOU
---- user output:
PASSOU
-- TEST CASE 3:
---- input:
[[6.8,8.2,9.5],[4.2,1.1,3.8],[8.4,7.9,8.1]]
2
---- correct output:
PASSOU
---- user output:
PASSOU
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-02 16:50:53) 
-- CODE:
from numpy import*
from numpy.linalg import*
a = array(eval(input()))
b = int(input())
w = 0
f = shape(a)[0]
g = shape(a)[1]
for i in range(g):
	w += a[i,b]
x = w/f
if x >= 5 and x <= 10:
	print("PASSOU")
else:
	print("REPROVOU")



-- EXECUTION TIME:
4.93819
-- TEST CASE 1:
---- input:
[[8.7,8.6,2.2],[5.3,8.0,4.9],[0.3,4.4,9.9]]
2
---- correct output:
REPROVOU
---- user output:
REPROVOU
-- TEST CASE 2:
---- input:
[[9.5,0.5,8.1],[1.4,5.3,4.0],[9.4,2.6,2.7]]
1
---- correct output:
REPROVOU
---- user output:
PASSOU
-- TEST CASE 3:
---- input:
[[6.8,8.2,9.5],[4.2,1.1,3.8],[8.4,7.9,8.1]]
2
---- correct output:
PASSOU
---- user output:

-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-02 16:51:00) 
-- CODE:
from numpy import*
from numpy.linalg import*
a = array(eval(input()))
b = int(input())
w = 0
f = shape(a)[0]
g = shape(a)[1]
for i in range(g):
	w += a[i,b]
x = w/f
if x >= 5:
	print("PASSOU")
else:
	print("REPROVOU")



-- EXECUTION TIME:
1.05787
-- TEST CASE 1:
---- input:
[[8.7,8.6,2.2],[5.3,8.0,4.9],[0.3,4.4,9.9]]
2
---- correct output:
REPROVOU
---- user output:
PASSOU
-- TEST CASE 2:
---- input:
[[9.5,0.5,8.1],[1.4,5.3,4.0],[9.4,2.6,2.7]]
1
---- correct output:
REPROVOU
---- user output:
REPROVOU
-- TEST CASE 3:
---- input:
[[6.8,8.2,9.5],[4.2,1.1,3.8],[8.4,7.9,8.1]]
2
---- correct output:
PASSOU
---- user output:
PASSOU
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-02 16:51:05) 
-- CODE:
from numpy import*
from numpy.linalg import*
a = array(eval(input()))
b = int(input())
w = 0
f = shape(a)[0]
g = shape(a)[1]
for i in range(g):
	w += a[i,b]
x = w/f
if x >= 5:
	print("PASSOU")
else:
	print("REPROVOU")



-- EXECUTION TIME:
1.22242
-- TEST CASE 1:
---- input:
[[8.7,8.6,2.2],[5.3,8.0,4.9],[0.3,4.4,9.9]]
2
---- correct output:
REPROVOU
---- user output:
PASSOU
-- TEST CASE 2:
---- input:
[[9.5,0.5,8.1],[1.4,5.3,4.0],[9.4,2.6,2.7]]
1
---- correct output:
REPROVOU
---- user output:
REPROVOU
-- TEST CASE 3:
---- input:
[[6.8,8.2,9.5],[4.2,1.1,3.8],[8.4,7.9,8.1]]
2
---- correct output:
PASSOU
---- user output:
PASSOU
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-02 16:51:16) 
-- CODE:
from numpy import*
from numpy.linalg import*
a = array(eval(input()))
b = int(input())
w = 0
f = shape(a)[0]
g = shape(a)[1]
for i in range(g):
	w += a[i,b]
x = w/f
if x >= 5:
	print("PASSOU")
else:
	print("REPROVOU")



-- EXECUTION TIME:
1.0561
-- TEST CASE 1:
---- input:
[[8.7,8.6,2.2],[5.3,8.0,4.9],[0.3,4.4,9.9]]
2
---- correct output:
REPROVOU
---- user output:
PASSOU
-- TEST CASE 2:
---- input:
[[9.5,0.5,8.1],[1.4,5.3,4.0],[9.4,2.6,2.7]]
1
---- correct output:
REPROVOU
---- user output:
REPROVOU
-- TEST CASE 3:
---- input:
[[6.8,8.2,9.5],[4.2,1.1,3.8],[8.4,7.9,8.1]]
2
---- correct output:
PASSOU
---- user output:
PASSOU
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-02 16:51:36) 
-- CODE:
from numpy import*
from numpy.linalg import*
a = array(eval(input()))
b = int(input())
w = 0
f = shape(a)[0]
g = shape(a)[1]
for i in range(g):
	w += a[i,b]
x = w/f
if x >= 5:
	print("PASSOU")
elif x <=5:
	print("REPROVOU")



-- EXECUTION TIME:
1.08297
-- TEST CASE 1:
---- input:
[[8.7,8.6,2.2],[5.3,8.0,4.9],[0.3,4.4,9.9]]
2
---- correct output:
REPROVOU
---- user output:
PASSOU
-- TEST CASE 2:
---- input:
[[9.5,0.5,8.1],[1.4,5.3,4.0],[9.4,2.6,2.7]]
1
---- correct output:
REPROVOU
---- user output:
REPROVOU
-- TEST CASE 3:
---- input:
[[6.8,8.2,9.5],[4.2,1.1,3.8],[8.4,7.9,8.1]]
2
---- correct output:
PASSOU
---- user output:
PASSOU
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:51:40) 
-- CODE:
from numpy import*
from numpy.linalg import*
a = array(eval(input()))
b = int(input())
w = 0
f = shape(a)[0]
g = shape(a)[1]
for i in range(g):
	w += a[i,b]
x = w/f
if x >= 5:
	print("PASSOU")
elif x <5:
	print("REPROVOU")



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-02 16:51:45) 
-- CODE:
from numpy import*
from numpy.linalg import*
a = array(eval(input()))
b = int(input())
w = 0
f = shape(a)[0]
g = shape(a)[1]
for i in range(g):
	w += a[i,b]
x = w/f
if x >= 5:
	print("PASSOU")
elif x <5:
	print("REPROVOU")



-- EXECUTION TIME:
1.01253
-- TEST CASE 1:
---- input:
[[8.7,8.6,2.2],[5.3,8.0,4.9],[0.3,4.4,9.9]]
2
---- correct output:
REPROVOU
---- user output:
PASSOU
-- TEST CASE 2:
---- input:
[[9.5,0.5,8.1],[1.4,5.3,4.0],[9.4,2.6,2.7]]
1
---- correct output:
REPROVOU
---- user output:
PASSOU
-- TEST CASE 3:
---- input:
[[6.8,8.2,9.5],[4.2,1.1,3.8],[8.4,7.9,8.1]]
2
---- correct output:
PASSOU
---- user output:
PASSOU
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-02 16:51:46) 
-- CODE:
from numpy import*
from numpy.linalg import*
a = array(eval(input()))
b = int(input())
w = 0
f = shape(a)[0]
g = shape(a)[1]
for i in range(g):
	w += a[i,b]
x = w/f
if x >= 5:
	print("PASSOU")
elif x <5:
	print("REPROVOU")



-- EXECUTION TIME:
1.98145
-- TEST CASE 1:
---- input:
[[8.7,8.6,2.2],[5.3,8.0,4.9],[0.3,4.4,9.9]]
2
---- correct output:
REPROVOU
---- user output:
PASSOU
-- TEST CASE 2:
---- input:
[[9.5,0.5,8.1],[1.4,5.3,4.0],[9.4,2.6,2.7]]
1
---- correct output:
REPROVOU
---- user output:
REPROVOU
-- TEST CASE 3:
---- input:
[[6.8,8.2,9.5],[4.2,1.1,3.8],[8.4,7.9,8.1]]
2
---- correct output:
PASSOU
---- user output:
PASSOU
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:51:49) 
-- CODE:
from numpy import*
from numpy.linalg import*
a = array(eval(input()))
b = int(input())
w = 0
f = shape(a)[0]
g = shape(a)[1]
for i in range(g):
	w += a[i,b]
x = w/f
if x >= 5:
	print("PASSOU")
elif x < 5:
	print("REPROVOU")



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-02 16:51:56) 
-- CODE:
from numpy import*
from numpy.linalg import*
a = array(eval(input()))
b = int(input())
w = 0
f = shape(a)[0]
g = shape(a)[1]
for i in range(g):
	w += a[i,b]
x = w/f
if x >= 5:
	print("PASSOU")
elif x < 5:
	print("REPROVOU")



-- EXECUTION TIME:
1.14291
-- TEST CASE 1:
---- input:
[[8.7,8.6,2.2],[5.3,8.0,4.9],[0.3,4.4,9.9]]
2
---- correct output:
REPROVOU
---- user output:
PASSOU
-- TEST CASE 2:
---- input:
[[9.5,0.5,8.1],[1.4,5.3,4.0],[9.4,2.6,2.7]]
1
---- correct output:
REPROVOU
---- user output:
REPROVOU
-- TEST CASE 3:
---- input:
[[6.8,8.2,9.5],[4.2,1.1,3.8],[8.4,7.9,8.1]]
2
---- correct output:
PASSOU
---- user output:
PASSOU
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-02 16:52:08) 
-- CODE:
from numpy import*
from numpy.linalg import*
a = array(eval(input()))
b = int(input())
w = 0
f = shape(a)[0]
g = shape(a)[1]
for i in range(g):
	w += a[i,b]
x = w/g
if x >= 5:
	print("PASSOU")
elif x < 5:
	print("REPROVOU")



-- EXECUTION TIME:
0.78615
-- TEST CASE 1:
---- input:
[[8.7,8.6,2.2],[5.3,8.0,4.9],[0.3,4.4,9.9]]
2
---- correct output:
REPROVOU
---- user output:
PASSOU
-- TEST CASE 2:
---- input:
[[9.5,0.5,8.1],[1.4,5.3,4.0],[9.4,2.6,2.7]]
1
---- correct output:
REPROVOU
---- user output:
REPROVOU
-- TEST CASE 3:
---- input:
[[6.8,8.2,9.5],[4.2,1.1,3.8],[8.4,7.9,8.1]]
2
---- correct output:
PASSOU
---- user output:
PASSOU
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:52:11) 
-- CODE:
from numpy import*
from numpy.linalg import*
a = array(eval(input()))
b = int(input())
w = 0
f = shape(a)[0]
g = shape(a)[1]
for i in range(g):
	w += a[i,b]
x = w/g
if x >= 5:
	print("PASSOU")
elif x < 5:
	print("REPROVOU")



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-02 16:52:11) 
-- CODE:
from numpy import*
from numpy.linalg import*
a = array(eval(input()))
b = int(input())
w = 0
f = shape(a)[0]
g = shape(a)[1]
for i in range(g):
	w += a[i,b]
x = w/g
if x >= 5:
	print("PASSOU")
elif x < 5:
	print("REPROVOU")



-- EXECUTION TIME:
0.972837
-- TEST CASE 1:
---- input:
[[8.7,8.6,2.2],[5.3,8.0,4.9],[0.3,4.4,9.9]]
2
---- correct output:
REPROVOU
---- user output:
PASSOU
-- TEST CASE 2:
---- input:
[[9.5,0.5,8.1],[1.4,5.3,4.0],[9.4,2.6,2.7]]
1
---- correct output:
REPROVOU
---- user output:
REPROVOU
-- TEST CASE 3:
---- input:
[[6.8,8.2,9.5],[4.2,1.1,3.8],[8.4,7.9,8.1]]
2
---- correct output:
PASSOU
---- user output:
PASSOU
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:52:49) 
-- CODE:
from numpy import*
from numpy.linalg import*
a = array(eval(input()))
b = int(input())
w = 0
f = shape(a)[0]
g = shape(a)[1]
for i in range(g):
	w += a[i,b]
x = w/f
if x >= 5:
	print("PASSOU")
elif x < 5:
	print("REPROVOU")



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-02 16:53:23) 
-- CODE:
from numpy import*
from numpy.linalg import*
a = array(eval(input()))
b = int(input())
w = 0
f = shape(a)[0]
g = shape(a)[1]
for i in range(g):
	w += a[i,b]
x = w/f
if x >= 5:
	print("PASSOU")
else:
	print("REPROVOU")



-- EXECUTION TIME:
1.04589
-- TEST CASE 1:
---- input:
[[8.7,8.6,2.2],[5.3,8.0,4.9],[0.3,4.4,9.9]]
2
---- correct output:
REPROVOU
---- user output:
PASSOU
-- TEST CASE 2:
---- input:
[[9.5,0.5,8.1],[1.4,5.3,4.0],[9.4,2.6,2.7]]
1
---- correct output:
REPROVOU
---- user output:
REPROVOU
-- TEST CASE 3:
---- input:
[[6.8,8.2,9.5],[4.2,1.1,3.8],[8.4,7.9,8.1]]
2
---- correct output:
PASSOU
---- user output:
PASSOU
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-02 16:54:25) 
-- CODE:
from numpy import*
from numpy.linalg import*
a = array(eval(input()))
b = int(input())
w = 0
f = shape(a)[0]
g = shape(a)[1]
for i in range(f):
	w += a[i,b]
x = w/f
if x >= 5:
	print("PASSOU")
else:
	print("REPROVOU")
-- EXECUTION TIME:
0.913835
-- TEST CASE 1:
---- input:
[[8.7,8.6,2.2],[5.3,8.0,4.9],[0.3,4.4,9.9]]
2
---- correct output:
REPROVOU
---- user output:
PASSOU
-- TEST CASE 2:
---- input:
[[9.5,0.5,8.1],[1.4,5.3,4.0],[9.4,2.6,2.7]]
1
---- correct output:
REPROVOU
---- user output:
REPROVOU
-- TEST CASE 3:
---- input:
[[6.8,8.2,9.5],[4.2,1.1,3.8],[8.4,7.9,8.1]]
2
---- correct output:
PASSOU
---- user output:
PASSOU
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-02 16:54:49) 
-- CODE:
from numpy import*
from numpy.linalg import*
a = array(eval(input()))
b = int(input())
w = 0
f = shape(a)[0]
g = shape(a)[1]
for i in range(g):
	w += a[i,b]
x = w/f
if x >= 5,0:
	print("PASSOU")
else:
	print("REPROVOU")
-- EXECUTION TIME:
0.898286
-- ERROR:
  File "/home/codebench/codes/1871/1711/main.py", line 11
    if x >= 5,0:
             ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-02 16:54:58) 
-- CODE:
from numpy import*
from numpy.linalg import*
a = array(eval(input()))
b = int(input())
w = 0
f = shape(a)[0]
g = shape(a)[1]
for i in range(g):
	w += a[i,b]
x = w/f
if x >= 5.0:
	print("PASSOU")
else:
	print("REPROVOU")
-- EXECUTION TIME:
1.23478
-- TEST CASE 1:
---- input:
[[8.7,8.6,2.2],[5.3,8.0,4.9],[0.3,4.4,9.9]]
2
---- correct output:
REPROVOU
---- user output:
PASSOU
-- TEST CASE 2:
---- input:
[[9.5,0.5,8.1],[1.4,5.3,4.0],[9.4,2.6,2.7]]
1
---- correct output:
REPROVOU
---- user output:
REPROVOU
-- TEST CASE 3:
---- input:
[[6.8,8.2,9.5],[4.2,1.1,3.8],[8.4,7.9,8.1]]
2
---- correct output:
PASSOU
---- user output:
PASSOU
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
